# reachAndGrasp

./: .gitignore  CMakeLists.txt  README  README.md
CMake/Templates/: samples.cfg.in  samples_d.cfg.in
Components/Volume/src/: OgreVolumeHalfFloatGridSource.cpp  OgreVolumeSource.cpp
Dependencies/: version.txt
Dependencies/include/SDL2/: SDL_config.h
Dependencies/lib/Debug/: OIS_d.lib  SDL2main.lib  freetyped.lib  zlibd.lib  zziplibd.lib
Dependencies/lib/Release/: OIS.lib  SDL2.lib  SDL2main.lib  freetype.lib  glsl_optimizer.lib  zlib.lib  zziplib.lib
Dependencies/src/SDL/: WhatsNew.txt
Dependencies/src/hlsl2glsl/: hlslang.vcxproj
Dependencies/src/ois/: CMakeLists.txt
Dependencies/src/ois/Win32/: OIS.APS
OgreMain/include/: OgreDeflate.h  OgreMesh.h  OgrePose.h  OgreScriptCompiler.h  OgreScriptTranslator.h
OgreMain/src/: OgreAnimationTrack.cpp  OgreDeflate.cpp  OgreMesh.cpp  OgrePose.cpp  OgreScriptCompiler.cpp.orig  OgreStreamSerialiser.cpp
PlugIns/: CMakeLists.txt
PlugIns/ParticleUniverse/: CMakeLists.txt
PlugIns/ParticleUniverse/include/: ParticleUniverseSystemManagerTokens.h
PlugIns/ParticleUniverse/src/: ParticleUniverseAffector.cpp  ParticleUniverseAffectorTokens.cpp  ParticleUniverseAliasTokens.cpp  ParticleUniverseAtlasImage.cpp  ParticleUniverseAttachable.cpp  ParticleUniverseAttachableTokens.cpp  ParticleUniverseBehaviourTokens.cpp  ParticleUniverseCameraDependency.cpp  ParticleUniverseCameraDependencyTokens.cpp  ParticleUniverseDll.cpp  ParticleUniverseDynamicAttribute.cpp  ParticleUniverseDynamicAttributeTokens.cpp  ParticleUniverseEmitter.cpp  ParticleUniverseEmitterTokens.cpp  ParticleUniverseEventHandlerTokens.cpp  ParticleUniverseExtern.cpp  ParticleUniverseExternTokens.cpp  ParticleUniverseForceField.cpp  ParticleUniverseNoise.cpp  ParticleUniverseObserver.cpp  ParticleUniverseObserverTokens.cpp  ParticleUniversePCH.cpp  ParticleUniverseParticle.cpp  ParticleUniverseParticlePool.cpp  ParticleUniversePlugin.cpp  ParticleUniverseRenderer.cpp  ParticleUniverseRendererTokens.cpp  ParticleUniverseScriptDeserializer.cpp  ParticleUniverseScriptSerializer.cpp  ParticleUniverseSystem.cpp  ParticleUniverseSystemManager.cpp  ParticleUniverseSystemManagerTokens.cpp  ParticleUniverseSystemTokens.cpp  ParticleUniverseTechnique.cpp  ParticleUniverseTechniqueTokens.cpp  ParticleUniverseVisualParticle.cpp
PlugIns/ParticleUniverse/src/Externs/: ParticleUniverseBoxColliderExtern.cpp  ParticleUniverseBoxColliderExternTokens.cpp  ParticleUniverseGravityExtern.cpp  ParticleUniverseGravityExternTokens.cpp  ParticleUniversePhysXActorExtern.cpp  ParticleUniversePhysXActorExternTokens.cpp  ParticleUniversePhysXBridge.cpp  ParticleUniversePhysXFluidExtern.cpp  ParticleUniversePhysXFluidExternTokens.cpp  ParticleUniverseSceneDecoratorExtern.cpp  ParticleUniverseSceneDecoratorExternTokens.cpp  ParticleUniverseSphereColliderExtern.cpp  ParticleUniverseSphereColliderExternTokens.cpp  ParticleUniverseVortexExtern.cpp  ParticleUniverseVortexExternTokens.cpp
PlugIns/ParticleUniverse/src/ParticleAffectors/: ParticleUniverseAlignAffector.cpp  ParticleUniverseAlignAffectorTokens.cpp  ParticleUniverseBaseCollider.cpp  ParticleUniverseBaseColliderTokens.cpp  ParticleUniverseBaseForceAffector.cpp  ParticleUniverseBaseForceAffectorTokens.cpp  ParticleUniverseBoxCollider.cpp  ParticleUniverseBoxColliderTokens.cpp  ParticleUniverseCollisionAvoidanceAffector.cpp  ParticleUniverseColourAffector.cpp  (+42 more)
Samples/: CMakeLists.txt  tr.exe.stackdump
Samples/Browser/include/: SampleBrowser.h  SampleBrowser_OSX.h.orig
Samples/Common/include/: Sample.h  SdkTrays.h
Samples/Compositor/include/: Compositor.h
Samples/Compositor/src/: HelperLogics.cpp
Samples/Dot3Bump/include/: Dot3Bump.h
Samples/DualQuaternion/Connection/: DualQuaternion.cpp  DualQuaternion.h  grasp.cpp  grasp.h  grasp_params.xml  intersection.h  locomotion.cpp  locomotion.h  reach.cpp  reach.h
Samples/FacialAnimation/include/: FacialAnimation.h
Samples/Fresnel/include/: Fresnel.h
Samples/Media/DeferredShadingMedia/: ssao.compositor  ssao.material  ssao_blurx_ps.glsl  ssao_blury_ps.glsl  ssao_ps.glsl  ssao_vs.glsl
Samples/Media/fonts/: Fxaa.compositor  Fxaa.material  Fxaa_fp.glsl  Fxaa_fp.glsles  Fxaa_vp.glsl  Fxaa_vp.glsles
Samples/Media/models/: ChrHarmony_Relax001_ArmReachBehind_High1.skeleton  ChrHarmony_Relax001_ArmReachBehind_High2.skeleton  ChrHarmony_Relax001_ArmReachBehind_Low1.skeleton  ChrHarmony_Relax001_ArmReachBehind_MidLow1.skeleton  ChrHarmony_Relax001_ArmReachBehind_MidLow2.skeleton  ChrHarmony_Relax001_ArmReachClose_Rt.skeleton  ChrHarmony_Relax001_ArmReachLfHigh.skeleton  ChrHarmony_Relax001_ArmReachMiddleHigh.skeleton  ChrHarmony_Relax001_ArmReachMiddleLow.skeleton  ChrHarmony_Relax001_ArmReachMiddleMidHigh.skeleton  ChrHarmony_Relax001_ArmReachRtLow.skeleton  WT_wuhuanzhige.mesh  a1.mesh  a2.mesh  a3.mesh  cloth.mesh  examples.xlsx  head_9_24.mesh  human.mesh  human_xiaoo.mesh  loco_left_bigcircle_fast.skeleton  loco_left_bigcircle_slow.skeleton  loco_left_smallcircle_slow.skeleton  loco_left_walk_fast.skeleton  loco_left_walk_slow.skeleton  loco_right_bigcircle_fast.skeleton  loco_right_smallcircle_fast.skeleton  loco_right_smallcircle_slow.skeleton  loco_right_walk_fast.skeleton  loco_right_walk_slow.skeleton  loco_walk_fast.skeleton  loco_walk_slow.skeleton  motion_params.xml  reach_params.xml  tiandao_face.mesh  yanqiu.mesh
Samples/Media/particle/: Examples.particle  emitted_emitter.particle  explosion.particle
Samples/ParticleFX/include/: OgreMapFileSystem.h  ParticleFX.h
Samples/ParticleFX/src/: OgreMapFileSystem.cpp
Samples/ParticleUniverseDemo/: CMakeLists.txt
Samples/ParticleUniverseDemo/include/: ParticleUniverseDemo.h
Samples/ParticleUniverseDemo1/: CMakeLists.txt
Samples/ParticleUniverseDemo1/include/: ParticleUniverseDemo.h
Samples/ParticleUniverseDemo1/src/: BaseApplication.cpp  main.cpp
Samples/SSAO/include/: SSAO.h
Samples/SkeletalAnimation/include/: SkeletalAnimation.h
Samples/Smoke/include/: Smoke.h
Samples/Transparency/include/: Transparency.h
(+157 files in other folders)
